CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasGPU")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(modules/VeritasMath)
ADD_SUBDIRECTORY(modules/VeritasOpenGL)

AUX_SOURCE_DIRECTORY(src SOURCES)
AUX_SOURCE_DIRECTORY(src/Textures SOURCES)
AUX_SOURCE_DIRECTORY(src/Programs SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VeritasMath VeritasOpenGL)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++11)
